fixed gap in front-end mobile

--- a/src/components/home-style.css
+++ b/src/components/home-style.css
@@ -1,6 +1,6 @@
-body {
+/* body {
     margin: 0; 
-  }
+  } */
 .home-container {
     background-image: url('../../public/images/bludeagave.jpg');
     width: 100vw;
@@ -259,7 +259,8 @@ body {
 
   @media only screen and (max-width: 768px) {
     .home-container {
-      height: 100vh; 
+      height: 50vh; 
+      width: auto;
       justify-content: center; 
     }
   
@@ -320,9 +321,14 @@ body {
         font-size: 25px !important; 
         padding-top: 30px;
       }
+
+      .carousel-nav {
+        margin-left: 0 !important; 
+      }
       .carousel-nav-container {
-        padding-right: 10vw;
-        max-width: 75vw;
+        /* padding-right: 10vw; */
+        /* max-width: 75vw; */
+        width: auto; 
       }
 
       .carousel-nav-item {
